--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,10 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     >
-    <ListView
-        android:id="@+id/listView"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/awesomepager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:background="@android:color/darker_gray"/>
 
 </RelativeLayout>
